fix overflowing code blocks

--- a/src/assets/style/code.scss
+++ b/src/assets/style/code.scss
@@ -36,6 +36,7 @@
 #app pre {
   padding: 1em 0 1em 1em;
   margin-bottom: 2.0em;
+  overflow-x: auto;
 }
 
 // inline code
